enable pylint's spellcheck
Currently all "misspelled" words are added to ignore words list file.
It should be reviewed and edited later.

--- a/master/Makefile
+++ b/master/Makefile
@@ -1,7 +1,11 @@
 # developer utilities
 pylint:
-	pylint --rcfile=../common/pylintrc buildbot
-	pylint --rcfile=../common/pylintrc docs/conf.py
+	pylint --rcfile=../common/pylintrc \
+	    --spelling-private-dict-file ../common/code_spelling_ignore_words.txt \
+			buildbot
+	pylint --rcfile=../common/pylintrc \
+	    --spelling-private-dict-file ../common/code_spelling_ignore_words.txt \
+	    docs/conf.py
 tutorial:
 	cd docs/tutorial; $(MAKE) html
 flake8:
