Replace xrange with range in examples
xrange is gone in Python 3

--- a/master/docs/examples/repo_gerrit.cfg
+++ b/master/docs/examples/repo_gerrit.cfg
@@ -6,7 +6,7 @@ from buildbot.plugins import *
 manifest_url = "git://github.com/CyanogenMod/android.git"
 manifest_branch = "froyo"
 
-slaves = ["slave%02d"%(i) for i in xrange(1, 2)]
+slaves = ["slave%02d"%(i) for i in range(1, 2)]
 
 repotarball = "/local/android/cyanogen/cyanogen_bootstrap.tgz"
 
