--- a/.travis.yml
+++ b/.travis.yml
@@ -61,7 +61,7 @@ matrix:
     # Tests of buildbot-worker on python 2.6
     # Specify SQLALCHEMY=latest to avoid errors installing.
     - python: "3.5"
-      env: TWISTED=trunk TESTS=trial SQLALCHEMY=latest
+      env: TWISTED=trunk TESTS=py3status SQLALCHEMY=latest
 
     - python: "2.6"
       env: TWISTED=14.0.2 TESTS=trial_worker SQLALCHEMY=latest
@@ -71,7 +71,7 @@ matrix:
 
   allow_failures:
     - python: 3.5
-      TESTS: trial
+      TESTS: py3status
 
 # Dependencies installation commands
 install:
@@ -129,6 +129,16 @@ script:
   - "[ $TESTS != js -o ${TRAVIS_PULL_REQUEST} = false ] || make frontend"
   - "[ $TESTS != js -o ${TRAVIS_PULL_REQUEST} != false ] || make frontend_install_tests"
 
+  - |
+    TESTS=py3status
+    if [ $TESTS = py3status ]; then
+        trial  --reporter=summary buildbot.test buildbot_worker.test| tail -n 1 | python -c "
+    import sys, requests
+    (timeTaken, tests, _, errors, failures, skips) = sys.stdin.read().split()
+    requests.post('https://events.buildbot.net/events/py3kstatus', json={
+        'timeTaken': float(timeTaken), 'tests': int(tests), 'errors': int(errors), 'failures': int(failures), 'skips': int(skips)
+    })"
+    fi
   - "[ $TESTS != trial ]   || trial  --reporter=text --rterrors buildbot.test buildbot_worker.test"
   - "[ $TESTS != trial_worker ] || trial  --reporter=text --rterrors buildbot_worker.test"
   # run tests under coverage for latest only (it's slower..)
