--- a/.travis.yml
+++ b/.travis.yml
@@ -91,10 +91,11 @@ install:
       [ $TESTS != trial_worker ] || \
       pip install -e 'worker[test]'
 
-  # install buildbot_www from pip in order to run the www tests
+  # install buildbot-www from pip in order to run the www tests
+  # install deprecated buildbot-slave in order to test backward compatibility
   - |
       [ $TESTS != trial -a $TESTS != coverage -a $TESTS != trial_worker -a $TESTS != trial_worker_only ] || \
-      (pip install wheel && pip install buildbot-www)
+      (pip install wheel && pip install buildbot-www buildbot-slave)
 
   - "pip install -e worker future"
 
