after_success does not exist in buildbot_travis so it wasn't run

--- a/.bbtravis.yml
+++ b/.bbtravis.yml
@@ -186,12 +186,10 @@ script:
 notifications:
   email: false
 
-after_success:
+after_script:
   - |
       # codecov
-      [ $TESTS != coverage ] || codecov
-
-after_script:
+      [ $TESTS != coverage ] || CODECOV_TOKEN="b80c80d7-689d-46d7-b1aa-59168bb4c9a9" codecov
   # List installed packages along with their versions.
   - "pip list"
 
