Pull in trunk version of automat in Python 3.5 build to eliminate some errors

--- a/.bbtravis.yml
+++ b/.bbtravis.yml
@@ -85,7 +85,10 @@ install:
   - |
       # pip installs
       set -e
-      if [ $TWISTED = trunk ]; then pip install git+https://github.com/twisted/twisted ; fi
+      if [ $TWISTED = trunk ]; then
+          pip install git+https://github.com/glyph/automat
+          pip install git+https://github.com/twisted/twisted
+      fi
       if [ $TWISTED != latest -a  $TWISTED != trunk ]; then pip install Twisted==$TWISTED ; fi
       if [ $SQLALCHEMY != latest ]; then pip install sqlalchemy==$SQLALCHEMY; fi
       if [ $TESTS = trial -o $TESTS = coverage -o $TESTS = lint -o $TESTS = js -o $TESTS = py3 ]; then
