--- a/.travis.yml
+++ b/.travis.yml
@@ -61,8 +61,6 @@ matrix:
     # Specify SQLALCHEMY=latest to avoid errors installing.
     - python: "3.5"
       env: TWISTED=trunk TESTS=flake8 SQLALCHEMY=latest
-    - python: "3.5"
-      env: TWISTED=trunk TESTS=py3status SQLALCHEMY=latest
 
     # Tests of buildbot-worker on python 2.6
     - python: "2.6"
@@ -84,7 +82,7 @@ install:
   # Install mysqlclient for tests that uses real MySQL
   # Install psycopg2 and pg8000 for tests that uses real PostgreSQL
   - |
-      if [ $TESTS = trial -o $TESTS = coverage -o $TESTS = lint -o $TESTS = js -o $TESTS = py3status ]; then
+      if [ $TESTS = trial -o $TESTS = coverage -o $TESTS = lint -o $TESTS = js ]; then
       pip install -e pkg \
                   -e 'master[tls,test]' \
                   -e 'worker[test]' \
@@ -129,17 +127,6 @@ script:
   # make frontend_install_tests takes 17 min, so we only do it post submit
   - "if [ $TESTS = js -a ${TRAVIS_PULL_REQUEST} = false ]; then make frontend ; fi"
   - "if [ $TESTS = js -a ${TRAVIS_PULL_REQUEST} = false ]; then make frontend_install_tests ; fi"
-
-  - |
-    if [ $TESTS = py3status ]; then
-       trial --reporter=summary buildbot.test | tee py3status
-       tail -n 1 py3status | python -c "
-    import sys, requests, os
-    (timeTaken, tests, _, errors, failures, skips) = sys.stdin.read().split()
-    requests.post('https://events.buildbot.net/events/py3kstatus', json={'py3kstatus': {
-        'timeTaken': float(timeTaken), 'tests': int(tests), 'errors': int(errors), 'failures': int(failures), 'skips': int(skips)
-    }, 'env': dict(os.environ)})"
-    fi
   - "if [ $TESTS = trial ]; then trial  --reporter=text --rterrors buildbot.test buildbot_worker.test; fi"
   - "if [ $TESTS = trial_worker ]; then trial  --reporter=text --rterrors buildbot_worker.test; fi"
   # run tests under coverage for latest only (it's slower..)
