e2e tests: fix the tests and refactor

--- a/smokes/master.cfg
+++ b/smokes/master.cfg
@@ -1,6 +1,9 @@
 # -*- python -*-
 # ex: set filetype=python:
 
+from __future__ import absolute_import
+from __future__ import print_function
+
 from buildbot.plugins import *
 
 # This is a sample buildmaster config file. It must be installed as
@@ -42,7 +45,7 @@ c['schedulers'].append(schedulers.SingleBranchScheduler(
                             name="all",
                             change_filter=util.ChangeFilter(branch='master'),
                             treeStableTimer=None,
-                            builderNames=["runtests", "slowruntests"]))
+                            builderNames=["runtests"]))
 
 c['schedulers'].append(schedulers.ForceScheduler(
                             name="force",
@@ -65,7 +68,7 @@ slowfactory = util.BuildFactory()
 slowfactory.addStep(steps.Git(repourl='https://github.com/buildbot/pyflakes.git', mode='incremental'))
 # run the tests (note that this will require that 'trial' is installed)
 slowfactory.addStep(steps.ShellCommand(command=["trial", "pyflakes"]))
-slowfactory.addStep(steps.ShellCommand(command=["sleep", "30"]))
+slowfactory.addStep(steps.ShellCommand(command=["sleep", "10"]))
 
 
 
