--- a/smokes/master.cfg
+++ b/smokes/master.cfg
@@ -110,7 +110,7 @@ c['www'] = dict(port=8010,
                 change_hook_dialects={'base': True},
                 plugins=dict(waterfall_view={}, console_view={}))
 
-
+c['buildbotNetUsageData'] = None
 ####### DB URL
 c['db'] = {
     # This specifies what database buildbot uses to store its state.  You can leave
