--- a/master/MANIFEST.in
+++ b/master/MANIFEST.in
@@ -18,8 +18,11 @@ include docs/manual/_images/*.png
 include docs/manual/_images/*.txt
 include docs/manual/_images/icon.blend
 include docs/manual/_images/Makefile
+include docs/manual/installation/*.rst
 include docs/bbdocs/*.py
 include docs/developer/*
+include docs/developer/_images/*
+
 include docs/relnotes/*
 
 include buildbot/scripts/sample.cfg
