Run flake8 on Python 3.5

--- a/.bbtravis.yml
+++ b/.bbtravis.yml
@@ -77,6 +77,8 @@ matrix:
     # python 3 tests
     - python: "3.5"
       env: TWISTED=trunk SQLALCHEMY=latest TESTS=py3
+    - python: "3.5"
+      env: TWISTED=trunk SQLALCHEMY=latest TESTS=flake8
 
 # Dependencies installation commands
 install:
