Use PATH to find python.exe

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,9 +11,12 @@ environment:
 
 install:
   - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
-  - "%PYTHON%\\python.exe -V -V"
+  - "python -c \"import sys; print(sys.prefix)\""
+  - "python -c \"import sys; print(sys.exec_prefix)\""
+  - "python -c \"import sys; print(sys.executable)\""
+  - "python -V -V"
   # Twisted requires pywin32 on Windows in order to spawn processes.
-  - "%PYTHON%\\python.exe -m pip install pypiwin32"
+  - "python -m pip install pypiwin32"
 
   # AppVeyor has SQLite 3.6.21, and Buildbot prefers at least 3.7,
   # install third-party SQLite.
@@ -25,19 +28,21 @@ install:
   - "7z x sqlite-dll-win32-x86-3110000.zip"
   - "copy /y sqlite3.dll %PYTHON%\\DLLs\\"
 
-  - "%PYTHON%\\python.exe -m pip install -e pkg"
-  - "%PYTHON%\\python.exe -m pip install -e master[tls,test]"
-  - "%PYTHON%\\python.exe -m pip install -e worker"
-  - "%PYTHON%\\python.exe -m pip install coverage codecov"
-  - "%PYTHON%\\python.exe -m pip list"
+  - "python -m pip install -e pkg"
+  - "python -m pip install -e master[tls,test]"
+  - "python -m pip install -e worker"
+  - "python -m pip install coverage codecov"
+  - "python -m pip list"
 
 build: false
 
 test_script:
-  - "%PYTHON%\\Scripts\\coverage.exe run --rcfile=common/coveragerc -m twisted.trial --reporter=text --rterrors buildbot.test buildbot_worker.test"
+  - "coverage run --rcfile=common/coveragerc -m twisted.trial --reporter=text --rterrors buildbot.test buildbot_worker.test"
 
 on_success:
-  - "%PYTHON%\\Scripts\\codecov.exe"
+  - "coverage combine"
+  - "codecov-publish: coverage xml -o coverage.xml -i"
+  - "codecov.exe"
 
 on_failure:
   # Store _trial_temp directory as artifact on build failure.
