--- a/appveyor.yml
+++ b/appveyor.yml
@@ -24,7 +24,7 @@ install:
 
   # TODO: There is no binary wheel for pysqlite and building on Windows is
   # painful. Let's just substitude sqlite3.dll with never version.
-  - "curl -O https://www.sqlite.org/2016/sqlite-dll-win32-x86-3110000.zip"
+  - "curl -k -O https://www.sqlite.org/2016/sqlite-dll-win32-x86-3110000.zip"
   - "7z x sqlite-dll-win32-x86-3110000.zip"
   - "copy /y sqlite3.dll %PYTHON%\\DLLs\\"
 
