--- a/smokes/master.cfg
+++ b/smokes/master.cfg
@@ -149,7 +149,7 @@ c['www']['plugins']['wsgi_dashboards'] = [  # This is a list of dashboards, you 
         'name': 'mydashboard',  # as used in URLs
         'caption': 'My Dashboard',  # Title displayed in the UI'
         'app': mydashboardapp,
-        'order': 5,  # priority of the dashboard in the let menu (lower is higher in the menu)
+        'order': 5,  # priority of the dashboard in the left menu (lower is higher in the menu)
         'icon': 'area-chart'  # available icon list can be found at http://fontawesome.io/icons/
     }
 ]
