add example with an http requests and a line chart

--- a/smokes/master.cfg
+++ b/smokes/master.cfg
@@ -4,11 +4,7 @@
 from __future__ import absolute_import
 from __future__ import print_function
 
-import os
-
 from buildbot.plugins import *
-from flask import Flask
-from flask import render_template
 
 # This is a sample buildmaster config file. It must be installed as
 # 'master.cfg' in your buildmaster's base directory.
@@ -107,8 +103,6 @@ c['titleURL'] = "https://launchpad.net/pyflakes"
 
 c['buildbotURL'] = "http://localhost:8010/"
 
-
-
 # minimalistic config to activate new web UI
 c['www'] = dict(port=8010,
                 change_hook_dialects={'base': True},
@@ -121,35 +115,4 @@ c['db'] = {
     # this at its default for all but the largest installations.
     'db_url': "sqlite:///state.sqlite",
 }
-
-
-mydashboardapp = Flask('test', root_path=os.path.dirname(__file__))
-# this allows to work on the template without having to restart Buildbot
-mydashboardapp.config['TEMPLATES_AUTO_RELOAD'] = True
-
-
-@mydashboardapp.route("/index.html")
-def main():
-    # This code fetches build data from the data api, and give it to the template
-    builders = mydashboardapp.buildbot_api.dataGet("/builders")
-
-    builds = mydashboardapp.buildbot_api.dataGet("/builds", limit=20)
-
-    # properties are actually not used in the template example, but this is how you get more properties
-    for build in builds:
-        build['properties'] = mydashboardapp.buildbot_api.dataGet(("builds", build['buildid'], "properties"))
-
-    # mydashboard.html is a template inside the template directory
-    return render_template('mydashboard.html', builders=builders, builds=builds)
-
-# Here we assume c['www']['plugins'] has already be created earlier.
-# Please see the web server documentation to understand how to configure the other parts.
-c['www']['plugins']['wsgi_dashboards'] = [  # This is a list of dashboards, you can create several
-    {
-        'name': 'mydashboard',  # as used in URLs
-        'caption': 'My Dashboard',  # Title displayed in the UI'
-        'app': mydashboardapp,
-        'order': 5,  # priority of the dashboard in the left menu (lower is higher in the menu)
-        'icon': 'area-chart'  # available icon list can be found at http://fontawesome.io/icons/
-    }
-]
+exec(open("mydashboard.py").read())
