add a custom stylesheet example

--- a/smokes/master.cfg
+++ b/smokes/master.cfg
@@ -115,4 +115,6 @@ c['db'] = {
     # this at its default for all but the largest installations.
     'db_url': "sqlite:///state.sqlite",
 }
+
+# in order to share this snippet in the doc, we load mydashboard.py using exec
 exec(open("mydashboard.py").read())
