do not require towncrier to build docs

--- a/master/docs/Makefile
+++ b/master/docs/Makefile
@@ -49,7 +49,10 @@ clean:
 	-rm -rf $(BUILDDIR)/*
 
 towncrier:
-	cd ../../; command -v towncrier >/dev/null 2>&1 && towncrier --draft |grep  'No significant changes.' || yes n | towncrier
+	if command -v towncrier >/dev/null 2>&1 ;\
+	then \
+	cd ../../; towncrier --draft |grep  'No significant changes.' || yes n | towncrier ;\
+	fi
 
 html: conf.py towncrier
 	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
