Adding the tzdata package
https://github.com/buildbot/buildbot/issues/3055

--- a/master/Dockerfile
+++ b/master/Dockerfile
@@ -39,6 +39,7 @@ RUN \
         dumb-init@edge\
         py-jinja2 \
         tar \
+        tzdata \
         curl && \
 # install pip dependencies
     pip install --upgrade pip setuptools && \
