We can run all the buildbot.tests and buildbot_worker.tests on Python 3.6

--- a/.bbtravis.yml
+++ b/.bbtravis.yml
@@ -71,7 +71,7 @@ matrix:
       env: TWISTED=latest SQLALCHEMY=latest TESTS=smokes
 
     - python: "3.6"
-      env: TWISTED=trunk SQLALCHEMY=latest TESTS=py3next
+      env: TWISTED=trunk SQLALCHEMY=latest TESTS=trial
 
 # Dependencies installation commands
 install:
