Add the enduser test for the login part One test is deactivated due to an issue on buildot 9 Not able to manage bad credentials
Signed-off-by: desurd <david.desurmont@gmail.com>

--- a/smokes/master.cfg
+++ b/smokes/master.cfg
@@ -124,16 +124,27 @@ c['db'] = {
     'db_url': "sqlite:///state.sqlite",
 }
 
+######## Authorization  part
 authz = util.Authz(
-  allowRules=[
+  allowRules=[util.AnyControlEndpointMatcher(role="admins", defaultDeny=True)
   ],
   roleMatchers=[
-    util.RolesFromEmails(admins=["my@email.com"])
+    util.RolesFromEmails(admins=["my@email.com","homer@email.com"])
   ]
 )
-auth=util.UserPasswordAuth({'my@email.com': b'mypass'})
+auth=util.UserPasswordAuth({'my@email.com': b'mypass', 'homer@email.com': b'doh!',
+                            'marge@email.com': b'maggie~', 'bart@email.com': b'bulldshit?',
+                            'lisa@email.com': b'Bleeding Gums Murphy'} )
+
 c['www']['auth'] = auth
 c['www']['authz'] = authz
+
+###################
+# Activation / Deactivation of avatar methods
+# not activate if the list is empty
+# deactivation due to the instabilities of Gravatar
+c['www']['avatar_methods'] = []
+
 
 # in order to share this snippet in the doc, we load mydashboard.py using exec
 exec(open("mydashboard.py").read())
