console_view: fix broken UI
Not sure if it was because of an angularJS upgrade, but console view was completly broken.

- changes were not displayed
- column were not aligned

big simplification of the code to make it more stable.

We loose the ability to have the header always visible, but gain a much easier to maintain UI

--- a/smokes/master.cfg
+++ b/smokes/master.cfg
@@ -9,6 +9,8 @@ from buildbot.plugins import *
 # This is a sample buildmaster config file. It must be installed as
 # 'master.cfg' in your buildmaster's base directory.
 
+NUM_BUILDERS = 2
+
 # This is the dictionary that the buildmaster pays attention to. We also use
 # a shorter alias to save typing.
 c = BuildmasterConfig = {}
@@ -45,7 +47,7 @@ c['schedulers'].append(schedulers.SingleBranchScheduler(
                             name="all",
                             change_filter=util.ChangeFilter(branch='master'),
                             treeStableTimer=None,
-                            builderNames=["runtests"]))
+                            builderNames=["runtests" + str(i) for i in range(NUM_BUILDERS)]))
 
 c['schedulers'].append(schedulers.ForceScheduler(
                             name="force",
@@ -81,6 +83,12 @@ c['builders'].append(
     util.BuilderConfig(name="slowruntests",
       workernames=["example-worker"],
       factory=slowfactory))
+
+for i in range(NUM_BUILDERS):
+    c['builders'].append(
+        util.BuilderConfig(name="runtests" + str(i),
+          workernames=["example-worker"],
+          factory=factory))
 
 ####### STATUS TARGETS
 # 'status' is a list of Status Targets. The results of each build will be
