Fix BasicAuth authentication on py3 and recent browsers.
fixes #3162` #3163`

--- a/smokes/master.cfg
+++ b/smokes/master.cfg
@@ -124,5 +124,16 @@ c['db'] = {
     'db_url': "sqlite:///state.sqlite",
 }
 
+authz = util.Authz(
+  allowRules=[
+  ],
+  roleMatchers=[
+    util.RolesFromEmails(admins=["my@email.com"])
+  ]
+)
+auth=util.UserPasswordAuth({'my@email.com': b'mypass'})
+c['www']['auth'] = auth
+c['www']['authz'] = authz
+
 # in order to share this snippet in the doc, we load mydashboard.py using exec
 exec(open("mydashboard.py").read())
