adds a requirements.txt for smooth dependency update with pyup.io

--- a/.bbtravis.yml
+++ b/.bbtravis.yml
@@ -89,6 +89,7 @@ install:
   - |
       # pip installs
       set -e
+      pip install -r requirements-dev.txt
       if [ $TWISTED = trunk ]; then
           pip install git+https://github.com/twisted/twisted
       fi
