--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ env:
 # Dependencies installation commands
 install:
   - pip install -U pip
+  - pip install -r requirements-dev.txt
   # codecov is the interface to codecov.io; see after_success
   - pip install codecov
   - "if [ $TWISTED = trunk ]; then pip install git+https://github.com/twisted/twisted ; fi"
