fix appveyor: upgrade pip first

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,7 +30,8 @@ install:
   - "7z x sqlite-dll-win32-x86-3110000.zip"
   - "copy /y sqlite3.dll %PYTHON%\\DLLs\\"
 
-  - "python -m pip install -r requirements-dev.txt"
+  - "python -m pip install -U pip"
+  - "python -m pip install -r requirements-ci.txt"
   - "python -m pip install -e pkg"
   - "python -m pip install -e master[tls,test]"
   - "python -m pip install -e worker"
