--- a/.bbtravis.yml
+++ b/.bbtravis.yml
@@ -83,9 +83,11 @@ matrix:
 # Dependencies installation commands
 install:
   - pip install -U pip
-  - condition: 'python != "2.6"'
+  - condition: python != "2.6"
     cmd: pip install -r requirements-ci.txt
-  - condition: 'python == "2.6"'
+  - condition: TESTS == "docs"
+    cmd: pip install -r requirements-cidocs.txt
+  - condition: python == "2.6"
     cmd: pip install -r requirements-ci2.6.txt
   - condition: '"sqlite" not in BUILDBOT_TEST_DB_URL'
     cmd: pip install -r requirements-cidb.txt
