Fix guanlecoja trying to use pug while jade needs to be used

--- a/www/guanlecoja-ui/package.json
+++ b/www/guanlecoja-ui/package.json
@@ -5,7 +5,7 @@
         "npm": ">=1.4.0"
     },
     "devDependencies": {
-        "guanlecoja": "latest",
+        "guanlecoja": "0.7.2",
         "shelljs": "0.5.1"
     }
 }
