Update manhole examples to specify an SSH host key

--- a/master/docs/examples/hello.cfg
+++ b/master/docs/examples/hello.cfg
@@ -63,7 +63,7 @@ c['titleURL'] = "http://www.hello.example.com/"
 c['buildbotURL'] = "http://localhost:8080"
 
 c['slavePortnum'] = 8007
-c['manhole'] = util.PasswordManhole(9900, "username", "password")
+c['manhole'] = util.PasswordManhole(9900, "username", "password", ssh_hostkey_dir="/data/ssh_host_keys/")
 
 c['www'] = {
     'port': 8080
