Add grid_view to web UI plugins in sample master.cfg files.

--- a/master/buildbot/scripts/sample.cfg
+++ b/master/buildbot/scripts/sample.cfg
@@ -93,7 +93,7 @@ c['buildbotURL'] = "http://localhost:8010/"
 
 # minimalistic config to activate new web UI
 c['www'] = dict(port=8010,
-                plugins=dict(waterfall_view={}, console_view={}))
+                plugins=dict(waterfall_view={}, console_view={}, grid_view={}))
 
 ####### DB URL
 
