--- a/smokes/master.cfg
+++ b/smokes/master.cfg
@@ -114,7 +114,7 @@ c['buildbotURL'] = "http://localhost:8010/"
 # minimalistic config to activate new web UI
 c['www'] = dict(port=8010,
                 change_hook_dialects={'base': True},
-                plugins=dict(waterfall_view={}, console_view={}))
+                plugins=dict(waterfall_view={}, console_view={}, grid_view={}))
 
 c['buildbotNetUsageData'] = None
 ####### DB URL
