--- a/master/Makefile
+++ b/master/Makefile
@@ -1,7 +1,7 @@
 # developer utilities
 pylint:
-	pylint --rcfile=../common/pylintrc buildbot
-	pylint --rcfile=../common/pylintrc docs/conf.py
+	pylint -j4 --rcfile=../common/pylintrc buildbot
+	pylint -j4 --rcfile=../common/pylintrc docs/conf.py
 tutorial:
 	cd docs/tutorial; $(MAKE) html
 flake8:
