When calling "trial pyflakes", add current directory to PYTHONPATH.
This is required in Twisted 16.6.0 and higher.

--- a/smokes/master.cfg
+++ b/smokes/master.cfg
@@ -61,15 +61,14 @@ c['schedulers'].append(schedulers.ForceScheduler(
 factory = util.BuildFactory()
 # check out the source
 factory.addStep(steps.Git(repourl='https://github.com/buildbot/pyflakes.git', mode='incremental'))
-# run the tests (note that this will not actually run the tests are they do not work with py3)
-factory.addStep(steps.ShellCommand(command=["echo", "trial", "pyflakes"]))
-
+factory.addStep(steps.ShellCommand(command=["trial", "pyflakes"],
+                                   env={"PYTHONPATH": "."}))
 
 slowfactory = util.BuildFactory()
 #check out the source
 slowfactory.addStep(steps.Git(repourl='https://github.com/buildbot/pyflakes.git', mode='incremental'))
-# run the tests (note that this will not actually run the tests are they do not work with py3)
-slowfactory.addStep(steps.ShellCommand(command=["echo", "trial", "pyflakes"]))
+slowfactory.addStep(steps.ShellCommand(command=["trial", "pyflakes"],
+                                       env={"PYTHONPATH": "."}))
 slowfactory.addStep(steps.ShellCommand(command=["sleep", "10"]))
 
 
