transition to hello-world project

--- a/smokes/master.cfg
+++ b/smokes/master.cfg
@@ -34,7 +34,7 @@ c['protocols'] = {'pb': {'port': 9989}}
 # about source code changes.  Here we point to the buildbot clone of pyflakes.
 c['change_source'] = []
 c['change_source'].append(changes.GitPoller(
-        'https://github.com/buildbot/pyflakes.git',
+        'https://github.com/buildbot/hello-world.git',
         workdir='gitpoller-workdir', branch='master',
         pollinterval=300))
 
@@ -60,13 +60,13 @@ c['schedulers'].append(schedulers.ForceScheduler(
 
 factory = util.BuildFactory()
 # check out the source
-factory.addStep(steps.Git(repourl='https://github.com/buildbot/pyflakes.git', mode='incremental'))
+factory.addStep(steps.Git(repourl='https://github.com/buildbot/hello-world.git', mode='incremental'))
 factory.addStep(steps.ShellCommand(command=["trial", "pyflakes"],
                                    env={"PYTHONPATH": "."}))
 
 slowfactory = util.BuildFactory()
 #check out the source
-slowfactory.addStep(steps.Git(repourl='https://github.com/buildbot/pyflakes.git', mode='incremental'))
+slowfactory.addStep(steps.Git(repourl='https://github.com/buildbot/hello-world.git', mode='incremental'))
 slowfactory.addStep(steps.ShellCommand(command=["trial", "pyflakes"],
                                        env={"PYTHONPATH": "."}))
 slowfactory.addStep(steps.ShellCommand(command=["sleep", "10"]))
