more pyflakes transition

--- a/smokes/master.cfg
+++ b/smokes/master.cfg
@@ -61,13 +61,13 @@ c['schedulers'].append(schedulers.ForceScheduler(
 factory = util.BuildFactory()
 # check out the source
 factory.addStep(steps.Git(repourl='https://github.com/buildbot/hello-world.git', mode='incremental'))
-factory.addStep(steps.ShellCommand(command=["trial", "pyflakes"],
+factory.addStep(steps.ShellCommand(command=["trial", "hello"],
                                    env={"PYTHONPATH": "."}))
 
 slowfactory = util.BuildFactory()
 #check out the source
 slowfactory.addStep(steps.Git(repourl='https://github.com/buildbot/hello-world.git', mode='incremental'))
-slowfactory.addStep(steps.ShellCommand(command=["trial", "pyflakes"],
+slowfactory.addStep(steps.ShellCommand(command=["trial", "hello"],
                                        env={"PYTHONPATH": "."}))
 slowfactory.addStep(steps.ShellCommand(command=["sleep", "10"]))
 
